ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2021-07-26, Execution Team 2021-08-09, Execution Team 2021-08-23
    • 5
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The TimestampMonitor currently checks and reports Interruption as it is processing its listeners. We have observed in our CI system that the server crashes when we have an exception type that is not handled by the current PeriodicJob task.

      It would be useful to include an additional exception handling loop for non-Interruption types and handle these exceptions appropriately.

            Assignee:
            Yuhong Zhang
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: