SERVER-58025 TimestampMonitor listener loop crashes on non-interruption exception