src/mongo/db/storage/storage_engine_impl.cpp
@@ -292,10 +292,7 @@ void StorageEngineImpl::loadCatalog(OperationContext* opCtx, LastShutdownState l
         _initCollection(opCtx, entry.catalogId, entry.nss, _options.forRepair, minVisibleTs);
 
         if (entry.nss.isOrphanCollection()) {
-            LOGV2(22248,
-                  "Orphaned collection found: {namespace}",
-                  "Orphaned collection found",
-                  "namespace"_attr = entry.nss);
+            LOGV2(22248, "Orphaned collection found", "namespace"_attr = entry.nss);
         }
     }
 
@@ -355,8 +352,6 @@ Status StorageEngineImpl::_recoverOrphanedCollection(OperationContext* opCtx,
         return {ErrorCodes::IllegalOperation, "Orphan recovery only supported in repair"};
     }
     LOGV2(22249,
-          "Storage engine is missing collection '{namespace}' from its metadata. Attempting "
-          "to locate and recover the data for {ident}",
           "Storage engine is missing collection from its metadata. Attempting to locate and "
           "recover the data",
           "namespace"_attr = collectionName,
@@ -524,7 +519,6 @@ StatusWith<StorageEngine::ReconcileResult> StorageEngineImpl::reconcileCatalogAn
         // checkpoint.
         if (dropPendingIdents.find(it) != dropPendingIdents.cend()) {
             LOGV2(22250,
-                  "Not removing ident for uncheckpointed collection or index drop: {ident}",
                   "Not removing ident for uncheckpointed collection or index drop",
                   "ident"_attr = it);
             continue;
@@ -622,8 +616,6 @@ StatusWith<StorageEngine::ReconcileResult> StorageEngineImpl::reconcileCatalogAn
                 auto buildUUID = *indexMetaData.buildUUID;
 
                 LOGV2(22253,
-                      "Found index from unfinished build. Collection: {coll} ({uuid}), index: "
-                      "{indexName}, build UUID: {buildUUID}",
                       "Found index from unfinished build",
                       "namespace"_attr = coll,
                       "uuid"_attr = *collUUID,
@@ -1194,11 +1186,12 @@ void StorageEngineImpl::TimestampMonitor::startup() {
                     throw;
                 // If we're interrupted at shutdown or after PeriodicRunner's client has been
                 // killed, it's fine to give up on future notifications.
-                LOGV2(22263,
-                      "Timestamp monitor is stopping. {reason}",
-                      "Timestamp monitor is stopping",
-                      "error"_attr = ex.reason());
+                LOGV2(22263, "Timestamp monitor is stopping", "error"_attr = ex);
                 return;
+            } catch (const DBException& ex) {
+                // Logs and rethrows the exceptions of other types.
+                LOGV2_ERROR(58025, "Timestamp monitor throws an exception", "error"_attr = ex);
+                throw;
             }
         },
         Seconds(1));
